--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "node-sass  ./src/caas.scss -o ./src && ng build --configuration=dc4",
+    "build": "ng build --configuration=dc4",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.1",
-    "@angular/cdk": "^10.2.0",
-    "@angular/common": "^10.1.1",
-    "@angular/compiler": "^10.1.1",
-    "@angular/core": "^10.1.1",
-    "@angular/forms": "^10.1.1",
-    "@angular/platform-browser": "^10.1.1",
-    "@angular/platform-browser-dynamic": "^10.1.1",
-    "@angular/pwa": "~0.802.0",
-    "@angular/router": "^10.1.1",
-    "@angular/service-worker": "^10.1.1",
+    "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.1",
+    "@angular/common": "~12.2.0",
+    "@angular/compiler": "~12.2.0",
+    "@angular/core": "~12.2.0",
+    "@angular/forms": "~12.2.0",
+    "@angular/platform-browser": "~12.2.0",
+    "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/pwa": "~12.2.0",
+    "@angular/router": "~12.2.0",
+    "@angular/service-worker": "^12.2.1",
     "@congacommerce/core": "2003.1.98",
     "@congacommerce/ecommerce": "^2003.1.98",
     "@congacommerce/elements": "^2003.1.98",
@@ -31,13 +31,13 @@
     "@ng-select/ng-option-highlight": "0.0.5",
     "@ng-select/ng-select": "^5.0.1",
     "@ngx-translate/core": "^13.0.0",
-    "angular2-ladda": "3.1.0",
+    "angular2-ladda": "3.1.1",
     "bootstrap": "^4.4.1",
-    "chart.js": "^2.9.3",
-    "class-transformer": "^0.2.3",
+    "chart.js": "^2.9.4",
+    "class-transformer": "^0.3.1",
     "classlist.js": "^1.1.20150312",
-    "crypto-js": "^3.1.9-1",
-    "currency-codes": "^1.5.1",
+    "crypto-js": "^4.0.0",
+    "currency-codes": "^2.1.0",
     "fuse.js": "^3.4.6",
     "jquery": "3.4.1",
     "jsforce": "^1.9.3",
@@ -45,52 +45,52 @@
     "lodash-decorators": "^6.0.1",
     "moment": "2.24.0",
     "ngx-bootstrap": "^6.1.0",
-    "ngx-scrollbar": "7.3.0",
+    "ngx-scrollbar": "7.6.0",
     "ngx-toastr": "^13.0.0",
-    "node-sass": "^4.13.1",
     "popper.js": "^1.16.1",
     "raven-js": "^3.27.2",
     "replace": "^1.1.5",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "^6.4.0",
+    "rxjs": "~6.6.0",
     "url-search-params-polyfill": "^7.0.1",
     "xml-js": "^1.6.11",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.1",
-    "@angular-devkit/build-ng-packagr": "~0.1001.1",
-    "@angular/cli": "^10.1.1",
-    "@angular/compiler-cli": "^10.1.1",
-    "@angular/language-service": "^10.1.1",
-    "@types/jasmine": "~3.3.16",
+    "@angular-devkit/build-angular": "~12.2.1",
+    "@angular-devkit/build-ng-packagr": "~0.1002.0",
+    "@angular/cli": "~12.2.1",
+    "@angular/compiler-cli": "~12.2.0",
+    "@angular/language-service": "^12.2.1",
+    "@types/jasmine": "~3.8.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~12.7.0",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
     "convert-units": "^2.3.4",
     "cpx": "^1.5.0",
-    "faker": "^4.1.0",
+    "faker": "^5.1.0",
     "husky": "^4.2.3",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "js-beautify": "^1.10.2",
-    "karma": "~4.2.0",
-    "karma-chrome-launcher": "~3.0.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
     "karma-mocha-reporter": "^2.2.5",
     "locale-currency": "0.0.2",
-    "lodash": "^4.17.21",
-    "ng-packagr": "^10.1.0",
+    "lodash": "^4.17.15",
+    "ng-packagr": "^12.2.0",
     "node-minify": "^3.2.1",
-    "protractor": "^5.4.2",
-    "ts-node": "~8.3.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~9.0.0",
     "tsickle": "^0.39.1",
     "tslib": "^2.0.1",
-    "tslint": "~5.18.0",
-    "typescript": "4.0.2",
-    "uglifyjs-folder": "^1.5.2",
+    "tslint": "~6.1.0",
+    "typescript": "~4.3.5",
+    "uglifyjs-folder": "^2.0.0",
     "webpack-bundle-analyzer": "^3.4.1"
   },
   "repository": "https://github.com/congacommerce/e-commerce"
